# wasp_autonomous_systems

./: .gitignore  .gitmodules  README.md
assignment_1/: package.xml  setup.cfg  setup.py
assignment_1/launch/: kitti.launch.py  kitti_car.launch.py  kitti_launch.py  real_robot.launch.py  turtlebot_real.launch.py  turtlebot_real_launch.py  turtlebot_simulation.launch.py  turtlebot_simulation_launch.py
assignment_1/rviz/: kitti.rviz  real_robot.rviz  turtlebot_real.rviz  turtlebot_simulation.rviz
assignment_2/: package.xml  setup.cfg  setup.py
assignment_2/assignment_2/: camera_segmentation.py  collision_detection.py  kitti_segmentation.py  kitti_segmentation_extra.py  odometry.py  yolo.py
assignment_2/launch/: collision_detection.launch.py  odometry.launch.py
assignment_2/rviz/: collision_detection.rviz  kitti_segmentation.rviz  kitti_segmentation_extra.rviz  odometry.rviz
assignment_3/: package.xml  setup.cfg  setup.py
assignment_3/assignment_3/: astar.py  breadth_first.py  create_map.py  dijkstra.py  grid_map.py  inflate_map.py  path_planner.py  rrt.py  rrtstar.py  utility.py
assignment_3/rviz/: planning.rviz
assignment_4/: package.xml  setup.cfg  setup.py
assignment_4/assignment_4/: altitude_hold.py  altitude_manual.py  altitude_pid.py
assignment_4/launch/: mavic_simulator.launch.py  mavic_simulator_simple.launch.py
wasp_autonomous_systems/: package.xml  setup.cfg  setup.py
wasp_autonomous_systems/launch/: webots.launch.py  webots_turtlebot.launch.py  webots_turtlebot_rgbd.launch.py
wasp_autonomous_systems/resource/: Kinect.proto  Mavic2Pro.proto  TurtleBot3Burger.proto  ros2control.yaml
wasp_autonomous_systems/urdf/: car.urdf  turtlebot_webots.urdf  turtlebot_webots_rgbd.urdf
wasp_autonomous_systems/wasp_autonomous_systems/: autonomous_controller.py  encoders.py  path.py
wasp_autonomous_systems/worlds/: complete_apartment.wbt  mavic_world.wbt  mavic_world_simple.wbt  turtlebot_apartment.wbt  turtlebot_collision_detection.wbt
wasp_autonomous_systems_interfaces/: CMakeLists.txt  package.xml
wasp_autonomous_systems_interfaces/msg/: Collision.msg  DutyCycles.msg  Encoders.msg  Thrust.msg
