<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_2</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-ultralytics-pip</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>wasp_autonomous_systems_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
