<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>assignment_3</name>
	<version>1.0.0</version>
	<description>WASP Autonomous Systems Assignment 3</description>
	<author email="dduberg@kth.se">Daniel Duberg</author>
	<maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
	<license>TODO: License declaration</license>

	<exec_depend>nav_msgs</exec_depend>
	<exec_depend>python-kdtree</exec_depend>
	<exec_depend>rclpy</exec_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
