<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>assignment_4</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rqt_reconfigure</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
